## Copyright (C) 2014-20xx CEA/DEN, EDF R&D

INCLUDE(Common)
FIND_PACKAGE(SWIG REQUIRED)

INCLUDE(${SWIG_USE_FILE})

SET(PROJECT_HEADERS
    Events.h
    Events_Message.h
    Events_MessageGroup.h
    Events_Listener.h
    Events_Loop.h
    Events_Error.h
    Events_LongOp.h
)

SET(PROJECT_SOURCES
    Events_Message.cpp
    Events_MessageGroup.cpp
    Events_Listener.cpp
    Events_Loop.cpp
    Events_Error.cpp
    Events_LongOp.cpp
)

ADD_DEFINITIONS(-DEVENTS_EXPORTS)
ADD_LIBRARY(Events SHARED ${PROJECT_SOURCES} ${PROJECT_HEADERS})

SET(CMAKE_SWIG_FLAGS -threads -Wall)

SET_SOURCE_FILES_PROPERTIES(Events.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(Events.i PROPERTIES SWIG_DEFINITIONS "-shadow")

INCLUDE_DIRECTORIES(
)

TARGET_LINK_LIBRARIES(Events ${PROJECT_LIBRARIES})

SET(SWIG_SCRIPTS
  ${CMAKE_CURRENT_BINARY_DIR}/EventsAPI.py
)

SET(SWIG_LINK_LIBRARIES
  Events
  ${PYTHON_LIBRARIES}
)

SWIG_ADD_MODULE(EventsAPI python Events.i ${PROJECT_HEADERS})
SWIG_LINK_LIBRARIES(EventsAPI ${SWIG_LINK_LIBRARIES})

IF(WIN32)
  SET_TARGET_PROPERTIES(_EventsAPI PROPERTIES DEBUG_OUTPUT_NAME _EventsAPI_d)
ENDIF(WIN32)

INSTALL(TARGETS Events DESTINATION ${SHAPER_INSTALL_BIN})
INSTALL(TARGETS _EventsAPI DESTINATION ${SHAPER_INSTALL_SWIG})
INSTALL(FILES ${SWIG_SCRIPTS} DESTINATION ${SHAPER_INSTALL_SWIG})
